# life-career-strategy-copilot

./: README.md  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: bets.py  context.py  decision.py  plan.py
backend/app/core/: config.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  entities.py
backend/app/prompts/: system_prompt.md
backend/app/services/: checklist.py  decision_engine.py  llm_client.py  pdf_export.py  plan_generator.py  strategic_bets.py
backend/scripts/: init_db.py
backend/tests/: test_bets_api.py  test_context_api.py  test_decision_api.py  test_plan_export_pdf_api.py  test_plan_generator_api.py
docs/: demo-script.md  sample_input.json  sample_plan.json
frontend/: README.md  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/checklist/: page.tsx
frontend/app/entry/: page.tsx
frontend/app/export/: page.tsx
frontend/app/goal-framing/: page.tsx
frontend/app/options/: page.tsx
frontend/lib/: api.ts  flow-store.tsx
